--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <link rel="stylesheet" href="//at.alicdn.com/t/font_1736178_lbnruvf0jn.css">
 
 
-<link  rel="stylesheet" href="/css/main.css" />
+<link  rel="stylesheet" href="/main.css" />
 
 <!-- 自定义样式保持在最底部 -->
 
