--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <meta name="twitter:card" content="summary_large_image">
   
   
-  <title>马里小奥</title>
+  <title>蝼蚁望晴空</title>
 
   <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css" />
 
